archive/k8s_for_scale/docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: astra
  labels:
    app: docs
    component: documents-service
spec:
  type: ClusterIP
  ports:
    - port: 8777
      targetPort: 8777
      protocol: TCP
      name: http
  selector:
    app: docs
