archive/k8s_for_scale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bridge
  namespace: astra
spec:
  selector:
    app: bridge
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  type: ClusterIP
